--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="/product/">Продукция</a>
+                              <a href="./product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -36,10 +36,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="/contacts/">Контакты</a>
+                              <a href="./contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="/vacancies/">Вакансии</a>
+                              <a href="./vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </nav>
@@ -60,7 +60,7 @@
                                  <a href="#about" data-anchor>О компании</a>
                               </li>
                               <li>
-                                 <a href="#product" data-anchor>Продукция</a>
+                                 <a href="./product/" data-anchor>Продукция</a>
                               </li>
                               <li>
                                  <a href="#production" data-anchor>Производство</a>
@@ -69,10 +69,10 @@
                                  <a href="#news" data-anchor>Пресс-центр</a>
                               </li>
                               <li>
-                                 <a href="#feedback" data-anchor>Контакты</a>
+                                 <a href="./contacts/" data-anchor>Контакты</a>
                               </li>
                               <li>
-                                 <a href="/vacancies/">Вакансии</a>
+                                 <a href="./vacancies/">Вакансии</a>
                               </li>
                            </ul>
                         </div>
