--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -23,7 +23,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="/product/">Продукция</a>
+                           <a href="./product/">Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -32,10 +32,10 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/contacts/">Контакты</a>
+                           <a href="./contacts/">Контакты</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="./vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
@@ -58,7 +58,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="#product" data-anchor>Продукция</a>
+                              <a href="./product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -67,10 +67,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="#feedback" data-anchor>Контакты</a>
+                              <a href="./contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="/vacancies/">Вакансии</a>
+                              <a href="./vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </div>
