--- a/contacts/index.html
+++ b/contacts/index.html
@@ -2,14 +2,14 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./assets/css/libs.css" />
-      <link rel="stylesheet" href="./assets/css/root.css" />
-      <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
-      <link rel="stylesheet" href="./assets/css/fonts.css" />
-      <link rel="stylesheet" href="./assets/css/slider.css" />
-      <link rel="stylesheet" href="./assets/css/main.css" />
-      <script src="./assets/js/libs.js"></script>
-      <script src="./assets/js/main.js"></script>
+      <link rel="stylesheet" href="../assets/css/libs.css" />
+      <link rel="stylesheet" href="../assets/css/root.css" />
+      <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
+      <link rel="stylesheet" href="../assets/css/fonts.css" />
+      <link rel="stylesheet" href="../assets/css/slider.css" />
+      <link rel="stylesheet" href="../assets/css/main.css" />
+      <script src="../assets/js/libs.js"></script>
+      <script src="../assets/js/main.js"></script>
       <title>Авангард</title>
    </head>
    <body>
@@ -80,7 +80,7 @@
                </div>
             </div>
          </header>
-         <link rel="stylesheet" href="./assets/css/components/header.css" />
+         <link rel="stylesheet" href="../assets/css/components/header.css" />
 
          <section class="contacts">
             <div class="container">
@@ -156,8 +156,8 @@
                </div>
             </div>
          </section>
-         <link rel="stylesheet" href="./assets/css/components/contact.css" />
-         <script src="./assets/js/contacts.js"></script>
+         <link rel="stylesheet" href="../assets/css/components/contact.css" />
+         <script src="../assets/js/contacts.js"></script>
          <footer class="footer">
             <div class="container container--grid">
                <div class="footer__col">
@@ -239,7 +239,7 @@
                </div>
             </div>
          </footer>
-         <link rel="stylesheet" href="./assets/css/components/footer.css" />
+         <link rel="stylesheet" href="../assets/css/components/footer.css" />
       </div>
    </body>
 </html>
