--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                      </div>
                      <div class="about__card">
                         <div class="about__card-icon icon-about-icon3"></div>
-                        <div class="about__card-title">Всероссийская доставка</div>
-                        <div class="about__card-text">Доставка во все регионы России</div>
+                        <div class="about__card-title">Доставка</div>
+                        <div class="about__card-text">Во все регионы России</div>
                      </div>
                   </div>
                </div>
