--- a/product/index.html
+++ b/product/index.html
@@ -176,7 +176,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/kraski.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/kraski.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -196,7 +196,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/emal.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/emal.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -215,7 +215,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/lak.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/lak.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -235,7 +235,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/grunt.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/grunt.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -253,7 +253,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/rastv.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/rastv.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -272,7 +272,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/gruntemal.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/gruntemal.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -293,7 +293,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/roadkraska.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/roadkraska.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -311,7 +311,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/compos.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/compos.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -329,7 +329,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/pasta.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/pasta.png" alt="" load='lazy' />
                      </div>
                   </div>
                   <div class="product__block" style="display: none" data-tab-content>
@@ -348,7 +348,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="../assets/images./product/mastika.png" alt="" load='lazy' />
+                        <img src="../assets/images/product/mastika.png" alt="" load='lazy' />
                      </div>
                   </div>
                </div>
@@ -374,7 +374,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/kraski.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/kraski.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -397,7 +397,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/emal.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/emal.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -419,7 +419,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/lak.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/lak.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -443,7 +443,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/grunt.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/grunt.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -465,7 +465,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/gruntemal.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/gruntemal.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -489,7 +489,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/roadkraska.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/roadkraska.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -511,7 +511,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/compos.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/compos.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -534,7 +534,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/pasta.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/pasta.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -557,7 +557,7 @@
                                  </div>
                               </div>
                               <div class="product__images">
-                                 <img src="../assets/images./product/mastika.png" alt="" load='lazy' />
+                                 <img src="../assets/images/product/mastika.png" alt="" load='lazy' />
                               </div>
                            </div>
                         </div>
@@ -566,7 +566,7 @@
                </div>
             </div>
          </section>
-         <link rel="stylesheet" href="../assets/css/components./product.css" />
+         <link rel="stylesheet" href="../assets/css/components/product.css" />
          <footer class="footer">
             <div class="container container--grid">
                <div class="footer__col">
