--- a/product/index.html
+++ b/product/index.html
@@ -95,7 +95,7 @@
                      </div>
                   </div>
                   <div class="product__tabs">
-                     <div class="swiper" data-slider="vacancies">
+                     <div class="swiper" data-slider="product">
                         <div class="swiper-wrapper">
                            <div class="swiper-slide">
                               <div class="product__tab active" data-tab>
