--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -156,7 +156,7 @@
                               </p>
                            </div>
                            <div class="vacancies__card-name">
-                              Оператор-комплект
+                              Оператор-комплектовщик
                            </div>
                         </div>
                      </div>
@@ -187,7 +187,7 @@
                               </p>
                            </div>
                            <div class="vacancies__card-name">
-                              Слесарь по ремонту
+                              Слесарь
                            </div>
                         </div>
                      </div>
