--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -23,7 +23,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="./product/">Продукция</a>
+                           <a href="/product/">Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -32,17 +32,15 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="./contacts/">Контакты</a>
+                           <a href="/contacts/">Контакты</a>
                         </li>
                         <li>
-                           <a href="./vacancies/">Вакансии</a>
+                           <a href="/vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
                   <div class="header__button">
-                     <a href="#feedback" class="button" data-anchor
-                        >Оставить заявку</a
-                     >
+                     <a href="#feedback" class="button" data-anchor>Оставить заявку</a>
                   </div>
                   <div class="haeder__burger">
                      <div class="burger" data-burger></div>
@@ -58,7 +56,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="./product/">Продукция</a>
+                              <a href="/product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -67,10 +65,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="./contacts/">Контакты</a>
+                              <a href="/contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="./vacancies/">Вакансии</a>
+                              <a href="/vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </div>
@@ -89,29 +87,19 @@
                <div class="vacancies__inner">
                   <h1 class="vacancies__title title">Вакансии</h1>
                   <div class="vacancies__grid">
-                     <div
-                        class="vacancies__card vacancies__card--dark vacancies__card--intro"
-                     >
+                     <div class="vacancies__card vacancies__card--dark vacancies__card--intro">
                         <div class="vacancies__card-text-mode">
                            <div class="vacancies__card-text">
-                              Присоединяйтесь к дружной команде и найдите свою
-                              идеальную вакансию среди открытых позиций на
-                              четырех наших точках.
+                              Присоединяйтесь к дружной команде и найдите свою идеальную вакансию среди открытых позиций
+                              на четырех наших точках.
                            </div>
                            <div class="vacancies__card-mode">
                               11
-                              <span
-                                 class="vacancies__card-name vacancies__card-name-mobile"
-                                 >Вакансий</span
-                              >
+                              <span class="vacancies__card-name vacancies__card-name-mobile">Вакансий</span>
                            </div>
                         </div>
                         <div class="vacancies__card-button-name">
-                           <a
-                              href=""
-                              class="vacancies__card-button button button--solid"
-                              data-modal-open="vacancies"
-                           >
+                           <a href="" class="vacancies__card-button button button--solid" data-modal-open="vacancies">
                               СВЯЗАТЬСЯ
                            </a>
                            <div class="vacancies__card-name">Вакансий</div>
@@ -125,19 +113,11 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 База Хитон
-                              </p>
-                              <p class="vacancies__card-address-item">
-                                 База ТЭЦ
-                              </p>
-                              <p class="vacancies__card-address-item">
-                                 База Юдино
-                              </p>
+                              <p class="vacancies__card-address-item">База Хитон</p>
+                              <p class="vacancies__card-address-item">База ТЭЦ</p>
+                              <p class="vacancies__card-address-item">База Юдино</p>
                            </div>
-                           <div class="vacancies__card-name">
-                              Водитель погрузчика
-                           </div>
+                           <div class="vacancies__card-name">Водитель погрузчика</div>
                         </div>
                      </div>
 
@@ -148,16 +128,10 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 База Хитон
-                              </p>
-                              <p class="vacancies__card-address-item">
-                                 База ТЭЦ
-                              </p>
+                              <p class="vacancies__card-address-item">База Хитон</p>
+                              <p class="vacancies__card-address-item">База ТЭЦ</p>
                            </div>
-                           <div class="vacancies__card-name">
-                              Оператор-комплектовщик
-                           </div>
+                           <div class="vacancies__card-name">Оператор-комплектовщик</div>
                         </div>
                      </div>
 
@@ -168,9 +142,7 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 База Юдино
-                              </p>
+                              <p class="vacancies__card-address-item">База Юдино</p>
                            </div>
                            <div class="vacancies__card-name">Кладовщик</div>
                         </div>
@@ -182,13 +154,9 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 База Юдино
-                              </p>
+                              <p class="vacancies__card-address-item">База Юдино</p>
                            </div>
-                           <div class="vacancies__card-name">
-                              Слесарь
-                           </div>
+                           <div class="vacancies__card-name">Слесарь</div>
                         </div>
                      </div>
                      <div class="vacancies__card">
@@ -198,9 +166,7 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 Офис. Ул. Достоевского, 52
-                              </p>
+                              <p class="vacancies__card-address-item">Офис. Ул. Достоевского, 52</p>
                            </div>
                            <div class="vacancies__card-name">ЛОГИСТ</div>
                         </div>
@@ -212,13 +178,9 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 Офис. Ул. Достоевского, 52
-                              </p>
+                              <p class="vacancies__card-address-item">Офис. Ул. Достоевского, 52</p>
                            </div>
-                           <div class="vacancies__card-name">
-                              Менеджер по снабжению
-                           </div>
+                           <div class="vacancies__card-name">Менеджер по снабжению</div>
                         </div>
                      </div>
                      <div class="vacancies__card vacancies__card--dark">
@@ -228,13 +190,9 @@
                         </div>
                         <div class="vacancies__card-info">
                            <div class="vacancies__card-address">
-                              <p class="vacancies__card-address-item">
-                                 Офис. Ул. Достоевского, 52
-                              </p>
+                              <p class="vacancies__card-address-item">Офис. Ул. Достоевского, 52</p>
                            </div>
-                           <div class="vacancies__card-name">
-                              Менеджер продаж МСК
-                           </div>
+                           <div class="vacancies__card-name">Менеджер по продажам МСК</div>
                         </div>
                      </div>
                   </div>
@@ -242,66 +200,34 @@
             </div>
          </section>
          <link rel="stylesheet" href="../assets/css/components/vacancies.css" />
+
          <div class="vacancies__modal modal" data-modal="vacancies">
             <div class="modal__container modal__container--white">
-               <div
-                  class="modal__container-close icon-close"
-                  data-modal-close
-               ></div>
-               <div
-                  class="vacancies__modal_container-inner modal__container-inner"
-               >
-                  <h2 class="vacancies__modal-title title">ОСТАВИТЬ ЗАВЯКУ</h2>
-                  <form method="post" class="vacancies__form form" data-form>
+               <div class="modal__container-close icon-close" data-modal-close></div>
+               <div class="vacancies__modal_container-inner modal__container-inner">
+                  <h2 class="vacancies__modal-title title">ОСТАВИТЬ ЗАЯВКУ</h2>
+                  <form method="post" class="vacancies__form form" data-form="vacancies" autocomplete="off">
                      <div class="form__col">
-                        <input
-                           class="input"
-                           type="text"
-                           name="name"
-                           placeholder="Введите Имя"
-                           id="name"
-                        />
-                        <input
-                           class="input"
-                           type="text"
-                           name="email"
-                           placeholder="Введите E-mail"
-                           id="email"
-                        />
-                        <input
-                           class="input"
-                           type="text"
-                           name="phone"
-                           placeholder="Введите Телефон"
-                           id="phone"
-                        />
+                        <input class="input" type="text" name="name" placeholder="Введите Имя" id="name" />
+                        <input class="input" type="text" name="email" placeholder="Введите E-mail" id="email" />
+                        <input class="input" type="text" name="phone" placeholder="Введите Телефон" id="phone" />
                         <div class="file-field">
                            <label for="fileInput" class="input__file">
                               <i class="icon icon-file"></i>
                               <span class="input__file-name">Прикрепите файл</span>
                            </label>
-                           <input
-                              type="file"
-                              id="fileInput"
-                              name="fileInput"
-                              accept="image/*"
-                              style="display: none"
-                           />
+                           <input type="file" id="fileInput" name="fileInput" accept="image/*" style="display: none" />
                         </div>
                      </div>
                      <div class="form__col">
-                        <button
-                           type="submit"
-                           class="button button--solid"
-                           type="submit"
-                        >
-                           ОСТАВИТЬ ЗАВЯКУ
-                        </button>
+                        <button type="submit" class="button button--solid">ОСТАВИТЬ ЗАВЯКУ</button>
                      </div>
                   </form>
                </div>
             </div>
          </div>
+         <script src="https://unpkg.com/imask"></script>
+         <script src="../assets/js/validation.js"></script>
          <footer class="footer">
             <div class="container container--grid">
                <div class="footer__col">
@@ -349,15 +275,12 @@
                      </li>
 
                      <li class="footer__info-item">
-                        Email:<a href="mailto:lkm-trade@yandex.ru"
-                           >lkm-trade@yandex.ru</a
-                        >
+                        Email:<a href="mailto:lkm-trade@yandex.ru">lkm-trade@yandex.ru</a>
                      </li>
                      <li class="footer__info-item">
                         Адрес: Республика Татарстан, Казань, <br />
                         Офис: Улица Достоевского, 52 <br />
-                        Производство: Улица Тэцевская 295 Производство\Склад:
-                        Улица. 3я Кленовая, 9
+                        Производство: Улица Тэцевская 295 Производство\Склад: Улица. 3я Кленовая, 9
                      </li>
 
                      <div class="show-md">
@@ -368,13 +291,7 @@
                   </ul>
                   <div class="footer__dev">
                      <a href="https://saftech.net/" target="_blank">
-                        <svg
-                           width="45"
-                           height="42"
-                           viewBox="0 0 45 42"
-                           fill="none"
-                           xmlns="http://www.w3.org/2000/svg"
-                        >
+                        <svg width="45" height="42" viewBox="0 0 45 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                            <path
                               d="M26.1375 11.0022L23.2213 0.0820658C23.1962 -0.0117692 23.0566 -0.0301902 23.0026 0.0532092L4.04729 29.3192C3.97834 29.4256 4.13122 29.5353 4.23141 29.4512L26.1029 11.1054C26.1343 11.0791 26.1475 11.0397 26.1375 11.0022Z"
                               fill="#394E4E"
