--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                   <p class="feedback__text text">
                      Оставьте заявку и наш менеджер свяжется с Вами в ближайшее время для уточнения деталей.
                   </p>
-                  <form method="post" class="feedback__form form" autocomplete="off" data-form>
+                  <form method="post" class="feedback__form form" autocomplete="off" data-form="feedback">
                      <div class="feedback__form_row form__row">
                         <input
                            class="form__footer-field input"
@@ -358,7 +358,7 @@
          <link rel="stylesheet" href="./assets/css/components/feedback.css" />
          <script src="https://unpkg.com/imask"></script>
          <script src="./assets/js/validation.js"></script>
-         <div class="modal open" data-modal>
+         <div class="modal" data-modal="feedback">
             <div class="modal__container">
                <div class="modal__container-close icon-close" data-modal-close></div>
                <div class="modal__container-inner">
