--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -23,7 +23,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="/product/">Продукция</a>
+                           <a href="../product/">Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -32,10 +32,10 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/contacts/">Контакты</a>
+                           <a href="../contacts/">Контакты</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="../vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
@@ -56,7 +56,7 @@
                               <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="/product/">Продукция</a>
+                              <a href="../product/">Продукция</a>
                            </li>
                            <li>
                               <a href="#production" data-anchor>Производство</a>
@@ -65,10 +65,10 @@
                               <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="/contacts/">Контакты</a>
+                              <a href="../contacts/">Контакты</a>
                            </li>
                            <li>
-                              <a href="/vacancies/">Вакансии</a>
+                              <a href="../vacancies/">Вакансии</a>
                            </li>
                         </ul>
                      </div>
@@ -250,7 +250,7 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="../vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
