fix product slider

--- a/product/index.html
+++ b/product/index.html
@@ -353,7 +353,7 @@
                   </div>
                </div>
                <div class="product__mobile" data-slider-container="">
-                  <div class="swiper" data-slider="product">
+                  <div class="swiper" data-slider>
                      <!-- Additional required wrapper -->
                      <div class="swiper-wrapper">
                         <div class="swiper-slide">
