--- a/contacts/index.html
+++ b/contacts/index.html
@@ -23,7 +23,7 @@
                            <a href="#about" data-anchor>О компании</a>
                         </li>
                         <li>
-                           <a href="/product/">Продукция</a>
+                           <a href="../product/">Продукция</a>
                         </li>
                         <li>
                            <a href="#production" data-anchor>Производство</a>
@@ -32,10 +32,10 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/contacts/">Контакты</a>
+                           <a href="../contacts/">Контакты</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="../vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
@@ -180,7 +180,7 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="/vacancies/">Вакансии</a>
+                           <a href="../vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
