--- a/product/index.html
+++ b/product/index.html
@@ -589,7 +589,7 @@
                            <a href="#news" data-anchor>Пресс-центр</a>
                         </li>
                         <li>
-                           <a href="./vacancies/">Вакансии</a>
+                           <a href="../vacancies/">Вакансии</a>
                         </li>
                      </ul>
                   </nav>
